src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <description>The age of the contact</description>
        <formula>IF(ISNULL(Birthdate),0,FLOOR((TODAY()-Birthdate)/365.2425))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsClient__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsMobileUser__c</fullName>
        <description>Returns the number of Active Mobile User objects associated with this contact. The contact is considered to be a Mobile User if it has one (or more) related Mobile User objects.
In this context 0 means false, and 1 or more means true.</description>
        <label>Is Mobile User</label>
        <summaryForeignKey>Mobile_User__c.Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Mobile_User__c</fullName>
        <formula>IF( IsMobileUser__c &gt; 0
,
IMAGE(&apos;/img/checkbox_checked.gif&apos;, &apos;Checked&apos;)
,
IMAGE(&apos;/img/checkbox_unchecked.gif&apos;, &apos;Not Checked&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile User Count</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mobilesurveys_Id__c</fullName>
        <externalId>true</externalId>
        <label>Respondent ID</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>mobilesurveys_LastCheckInDate__c</fullName>
        <label>Last Check In Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mobilesurveys_LastCheckInDevice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>mobilesurveys Last Check In Device</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>mobilesurveys_Password__c</fullName>
        <label>Surveyor Password</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mobilesurveys_Status__c</fullName>
        <label>Surveyor Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>mobilesurveys_Username__c</fullName>
        <label>Surveyor Username</label>
        <length>64</length>
        <type>Text</type>
    </fields>
</CustomObject>